Add sign-in, sign-up, and hotel details pages with responsive design and accessibility features
- Created home-sign-in.html for user sign-in with a welcoming message and search functionality.
- Developed home-sign-up.html for new user registration, including accessibility needs selection.
- Implemented hotel-details.html to display detailed information about hotels, including ratings and reviews.
- Integrated Tailwind CSS for styling and responsiveness across all new pages.
- Added JavaScript functionality for dynamic content loading and user interaction.

--- a/pages/place detail page.html
+++ b/pages/place detail page.html
@@ -10,29 +10,10 @@
     </head>
     <body class="bg-gray-50">
     <!-- Navigation -->
-    <nav class="bg-gradient-to-r relative mt-14 ml-38 gap-10 from-teal-700 via-teal-600 to-teal-400 text-black py-5 px-8 rounded-b-[50px] shadow-lg">
-        <div class="max-w-7xl mx-auto flex items-center justify-between">
-            <div class="flex items-center space-x-3">
-                <div class="w-12 h-12 bg-blue-600 rounded-full flex items-center justify-center">
-                    <i class="fas fa-wheelchair text-white text-xl"></i>
-                </div>
-                <span class="text-2xl font-bold"><span class="text-blue-600">Access</span><span class="text-teal-900">Travel</span></span>
-            </div>
-            <div class="hidden md:flex space-x-12 text-lg font-medium">
-                <a href="#" class="hover:text-teal-900">Home</a>
-                <a href="#" class="hover:text-teal-900">Explore</a>
-                <a href="#" class="hover:text-teal-900">How it works</a>
-            </div>
-            <div class="flex space-x-4">
-                <button class="bg-teal-400 hover:bg-teal-500 p-3 rounded-full w-12 h-12 flex items-center justify-center">
-                    <i class="fas fa-bell text-teal-900 text-lg"></i>
-                </button>
-                <button class="bg-teal-300 hover:bg-teal-400 p-3 rounded-full w-12 h-12 flex items-center justify-center">
-                    <i class="fas fa-user text-teal-900 text-lg"></i>
-                </button>
-            </div>
-        </div>
-    </nav>
+ <header class="mx-auto w-full max-w-[1300px]">
+    <div id="navbar-placeholder"></div>
+</header>
+
 
     <!-- Hero Image -->
     <div class="relative W-[1512PX] h-[1014px] bg-cover bg-center" style="background-image: url('https://res.cloudinary.com/dpjnyojeo/image/upload/v1768091692/unsplash_M7GddPqJowg_fenm9a.png');">
